# nixpy

./: .gitignore  .lgtm.yml  .pylintrc  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  README.rst  Win32.md  api_data.html  api_metadata.html  appveyor.yml  checknix.py  conftest.py  findboost.py  genindex.html  identity.py  index.html  install.html  objects.inv  overview.html  pyproject.toml  pytest.ini  readthedocs.yml  release_instructions.md  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  tutorial.html
.github/: main.workflow
.github/action-codestyle37/: Dockerfile
.github/workflows/: pythonpackage.yml
_sources/: api_metadata.txt
_static/: alabaster.css
cmake/: FindNIX.cmake
debian/: changelog  control  copyright  python-nix.install  rules
debian/source/: options
doc/: nix-feature-parity.md  release_instructions.md
docs/source/: annotations.rst  api_data.rst  api_metadata.rst  basic_idea.rst  conf.py  contact.rst  data_handling.rst  faq.rst  file_handling.rst  finding_things.rst  getting_started.rst  image_data.rst  index.rst  install.rst  news.rst  overview.rst  py-modindex.rst  sources.rst  spike_time_data.rst  storing_data.rst  tagging.rst  tutorial.rst  user_api.rst
docs/source/api/: modules.rst  nixio.cmd.rst  nixio.exceptions.rst  nixio.hdf5.rst  nixio.rst  nixio.test.rst  nixio.test.xcompat.rst  nixio.util.rst
docs/source/examples/: annotations.py  categoryData.py  continuousRecording.py  docutils.py  fileCreate.py  imageData.py  imageWithMetadata.py  imageWithSource.py  irregularlySampledData.py  lif.py  multipleROIs.py  multipleTimeSeries.py  multiple_points.py  multiple_regions.py  rangeDimensionLink.py  regularlySampledData.py  singleROI.py  (+8 more)
examples/: fileCreate.py  imageData.py  imageWithMetadata.py  multipleROIs.py  singleROI.py  spikeTagging.py  taggedFeature.py  untaggedFeature.py
include/: accessors.hpp  entity.hpp  transmorgify.hpp
nix/: __init__.py  block.py  data_array.py  data_tag.py  entity_with_sources.py  file.py  group.py  info.py  multi_tag.py  property.py  section.py  simple_tag.py  source.py  tag.py  tests.py
nix/test/: testGroup.py  test_block.py  test_data_array.py  test_data_tag.py  test_dimensions.py  test_feature.py  test_file.py  test_group.py  test_multi_tag.py  test_property.py  test_proxy_list.py  test_section.py  test_simple_tag.py  test_source.py  test_tag.py  test_util.py
nix/util/: find.py  inject.py  proxy_list.py
nixio/: __init__.py  block.py  checklist.txt  compression.py  container.py  data_array.py  data_frame.py  data_set.py  data_view.py  datatype.py  dimension_type.py  dimensions.py  entity.py  entity_with_metadata.py  entity_with_sources.py  feature.py  file.py  group.py  info.json  info.py  link_type.py  make_test_file.py  metadata_reference.py  mkfile.py  multi_tag.py  nixpy_func.py  property.py  section.py  source.py  source_link_container.py  tag.py  testing.py  validate.py  validator.py  value.py
nixio/cmd/: __init__.py  explore.py  main.py  nixexplore.py  nixinfo.py  upgrade.py  validate.py
nixio/exceptions/: __init__.py  exceptions.py
nixio/hdf5/: h5dataset.py  h5group.py
nixio/pycore/: __init__.py  block.py  data_array.py  data_set.py  data_view.py  dimensions.py  entity.py  entity_with_metadata.py  entity_with_sources.py  feature.py  file.py  group.py  h5dataset.py  h5group.py  multi_tag.py  property.py  section.py  source.py  tag.py
nixio/test/: test_backend_compatibility.py  test_block.py  test_compression.py  test_container.py  test_data_array.py  test_data_frame.py  test_data_view.py  test_dimensions.py  test_doc_examples.py  test_feature.py  test_file.py  test_filesystem.py  test_group.py  test_multi_tag.py  test_nix_compatibility.py  test_property.py  test_proxy_list.py  test_section.py  test_source.py  test_tag.py  test_util.py  test_validate.py  test_validator.py  tmp.py
nixio/util/: __init__.py  find.py  inject.py  names.py  proxy_list.py  units.py  util.py
scripts/: README.md  checknix.py  compile_xcompat  dorelease.py  findboost.py
src/: PyBlock.cpp  PyBlock.hpp  PyDataArray.cpp  PyDataSet.cpp  PyDataTag.cpp  PyDimensions.cpp  PyEntity.hpp  PyExceptions.cpp  PyFeature.cpp  PyFile.cpp  PyFile.hpp  PyGroup.cpp  PyMultiTag.cpp  PyProperty.cpp  PyProperty.hpp  PyResult.cpp  PySection.cpp  PySection.hpp  PySimpleTag.cpp  PySource.cpp  PyTag.cpp  PyUtil.cpp  PyUtil.hpp  PyValue.cpp  PyValue.hpp  accessors.hpp  core.cc  docstrings.cpp  docstrings.hpp  transmorgify.hpp  util.cc
(+17 files in other folders)
